--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <br>
 
-        <img img src=“images/sony-logo.png” alt=“Columbia Logo”>
+        <img img src=“images/sony-logo.png” alt="Sony Logo">
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
