automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 
         <span>PHARRELLWILLIAMS.COM</span>
 
-        <img img src=“images/columbia-logo.png” alt=“Columbia Logo”>
+        <img img src="images/columbia-logo.png" alt="Columbia Logo">
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
 
         <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
-        <img img src=“images/sony-logo.png” alt="Sony Logo">
+        <img img src="images/sony-logo.png" alt="Sony Logo">
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
